[tool.poetry]
name = "custompy"
version = "0.1.0"
description = "small set of helper functions"
authors = ["Fedor Akhmetov <f.o.akhmetov@gmail.com>"]
repository = "https://github.com/Radioteddy/custompy"
readme = "README.md"
packages = [{include = "custompy"}]

[tool.poetry.dependencies]
python = ">=3.8"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
